--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebAppService.Models
+﻿@using WebAppService.Models.Updates
 @model WebNguoiDungQuanTri
 
 <aside class="left-sidebar with-vertical">
