--- a/WebAppService/Areas/Admin/Views/TaiSanDauGia/TaiSanDauGia.cshtml
+++ b/WebAppService/Areas/Admin/Views/TaiSanDauGia/TaiSanDauGia.cshtml
@@ -1,19 +1,10 @@
 ﻿
 @{
     ViewData["Title"] = "TaiSanDauGia";
-    Layout = "~/Areas/Admin/Views/Shared/_ViewAdmin.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/CustomMenu/_ViewCustom.cshtml";
 }
 
-<div class="col-lg-12 d-flex align-items-stretch">
-    <nav aria-label="breadcrumb" class="mb-1 w-100">
-        <ol class="breadcrumb border border-primary bg-secondary-subtle px-1 py-1 rounded">
-            <li class="breadcrumb-item">
-                <a href="javascript:void(0)" class="text-primary fs-3"><i class="ti ti-list"></i> Tài sản đấu giá</a>
-            </li>
-        </ol>
-    </nav>
-</div>
-<div class="card card-body">
+    <div class="card card-body">
     <div class="row">
         <div class="col-md-8 col-xl-9 text-end d-flex mt-3 mt-md-0">
             <div class="form-group">
@@ -34,21 +25,25 @@
     </div>
 </div>
 
-<div class="card card-body p-0">
-    <table id="table"
-           data-toggle="table"
-           data-flat="true"
-           data-search="false"
-           data-url="">
-        <thead>
-            <tr>
-                <th data-field="github.name" data-sortable="true">Mã tài sản</th>
-                <th data-field="github.count.stargazers" data-sortable="true">Tên tài sản</th>
-                <th data-field="github.count.forks" data-sortable="true">Giá khởi điểm</th>
-                <th data-field="github.description" data-sortable="true">Thời gian bắt đầu</th>
-                <th data-field="github.description" data-sortable="true">Thời gian kết thúc</th>
-                <th data-field="github.description" data-sortable="true">Chức năng</th>
-            </tr>
-        </thead>
-    </table>
+<div class="row">
+    <div class="col-5">
+        <div class="card card-body p-0">
+            <table id="table"
+                   data-toggle="table"
+                   data-flat="true"
+                   data-search="false"
+                   data-url="">
+                <thead>
+                    <tr>
+                        <th data-field="github.name" data-sortable="true">Mã tài sản</th>
+                        <th data-field="github.count.stargazers" data-sortable="true">Tên tài sản</th>
+                        <th data-field="github.description" data-sortable="true">Chức năng</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+    </div>
+    <div class="col-8">
+
+    </div>
 </div>
