--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -10,11 +10,10 @@
             <div class="item">
                 <div class="main-slider-three__img-box">
                     <div class="main-slider-three__shape-1">
-                        <img src="~/web/assets/images/shapes/main-slider-three-shape-1.png"
-                             alt="" />
-                    </div>
+						<img src="~/web/assets/images/shape.png" />
+					</div>
                     <div class="main-slider-three__img">
-                        <img src="https://img.freepik.com/premium-vector/courthhouse-icon-flat-sign-element-from-law-collection-creative-courthhouse-icon-web-design-templates-infographics-more_676904-1876.jpg"
+                        <img src="https://static.spacet.vn/image-resized/768x7680_max/img/product/2024-03-01/ngua-vang-trang-tri-kim-loai-11102-1-65e1892924095c38dc4be21a.webp"
                              alt="" />
                     </div>
                 </div>
@@ -47,7 +46,7 @@
 </section>
 <!--Main Slider Three End -->
 <!--Blog Three Start-->
-<section class="blog-three pb-0" id="blog">
+<section class="blog-three pb-0 pt-5" id="blog">
     <div class="container">
         <div class="section-title-two text-center sec-title-animation animation-style1">
             <div class="section-title-two__tagline-box justify-content-center">
@@ -69,7 +68,7 @@
                             <img src="https://data.lvo.vn/media/upload/1003262/lamson.jpg" alt="" />
                         </div>
                         <div class="blog-three__date">
-                            <span>13:00:00</span>
+                            <span>Thời gian đấu giá 08/04/2025 13:00:00</span>
                         </div>
                     </div>
                     <div class="blog-three__content">
@@ -93,7 +92,7 @@
                             <img src="https://data.lvo.vn/media/upload/1003262/lamson.jpg" alt="" />
                         </div>
                         <div class="blog-three__date">
-                            <span>13:00:00</span>
+                            <span>Thời gian đấu giá 08/04/2025 13:00:00</span>
                         </div>
                     </div>
                     <div class="blog-three__content">
@@ -118,7 +117,7 @@
                             <img src="https://data.lvo.vn/media/upload/1003262/lamson.jpg" alt="" />
                         </div>
                         <div class="blog-three__date">
-                            <span>13:00:00</span>
+                            <span>Thời gian đấu giá 08/04/2025 13:00:00</span>
                         </div>
                     </div>
                     <div class="blog-three__content">
@@ -139,7 +138,7 @@
 </section>
 <!--Blog Three End-->
 <!--Brand Two Start -->
-<section class="brand-two brand-three pb-4">
+<section class="brand-two brand-three pb-5 mb-5 pt-5">
     <div class="container">
         <div class="section-title-two text-center sec-title-animation animation-style1">
             <div class="section-title-two__tagline-box justify-content-center">
