--- a/WebAppService/wwwroot/web/assets/css/module-css/page-header.css
+++ b/WebAppService/wwwroot/web/assets/css/module-css/page-header.css
@@ -12,7 +12,7 @@
     max-width: 1680px;
     width: 100%;
     margin: 0 auto;
-    background-color: var(--crank-black);
+    background-color: #1717170a;
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
     overflow: hidden;
@@ -35,19 +35,18 @@
 .page-header__inner {
     position: relative;
     display: block;
-    padding: 282px 0 173px;
     overflow: hidden;
     z-index: 1;
 }
 
-.page-header__inner h2 {
-    font-size: 45px;
-    font-weight: 600;
-    line-height: 55px;
-    color: var(--crank-white);
-    text-transform: capitalize;
-    margin-bottom: 22px;
-}
+    .page-header__inner h2 {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 52px;
+        color: #000000;
+        text-transform: capitalize;
+        margin-bottom: 5px;
+    }
 
 .thm-breadcrumb__box {
     position: relative;
@@ -60,17 +59,17 @@
     display: inline-block;
 }
 
-.thm-breadcrumb li {
-    position: relative;
-    display: inline-block;
-    font-size: 24px;
-    font-weight: 600;
-    color: var(--crank-white);
-    text-transform: capitalize;
-    font-family: var(--crank-font-two);
-    -webkit-transition: all 500ms ease;
-    transition: all 500ms ease;
-}
+    .thm-breadcrumb li {
+        position: relative;
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 600;
+        color: #841e1e;
+        text-transform: capitalize;
+        font-family: var(--crank-font-two);
+        -webkit-transition: all 500ms ease;
+        transition: all 500ms ease;
+    }
 
 .thm-breadcrumb li span {
     position: relative;
@@ -79,13 +78,13 @@
     margin-right: 13px;
 }
 
-.thm-breadcrumb li a {
-    position: relative;
-    display: inline-block;
-    color: var(--crank-white);
-    -webkit-transition: all 500ms ease;
-    transition: all 500ms ease;
-}
+        .thm-breadcrumb li a {
+            position: relative;
+            display: inline-block;
+            color: #450606;
+            -webkit-transition: all 500ms ease;
+            transition: all 500ms ease;
+        }
 
 .thm-breadcrumb li:hover a {
     color: var(--crank-base);
