--- a/WebAppService/wwwroot/web/assets/css/module-css/services.css
+++ b/WebAppService/wwwroot/web/assets/css/module-css/services.css
@@ -38,23 +38,23 @@
     transform: translateY(-10px);
 }
 
-.services-one__single:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--crank-black);
-    border-radius: 17px;
-    transition: -webkit-transform 0.5s ease;
-    transition: transform 0.5s ease;
-    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-    transform-origin: bottom right;
-    -webkit-transform: scale(1, 0);
-    transform: scale(1, 0);
-    z-index: -1;
-}
+    .services-one__single:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #1717172e;
+        border-radius: 17px;
+        transition: -webkit-transform 0.5s ease;
+        transition: transform 0.5s ease;
+        transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+        transform-origin: bottom right;
+        -webkit-transform: scale(1, 0);
+        transform: scale(1, 0);
+        z-index: -1;
+    }
 
 .services-one__single:hover:before {
     -webkit-transform: scale(1, 1);
